# erlang-language-platform

./: .buckconfig  .gitignore  .gitmodules  404.html  AGENTS.md  CONTRIBUTING.md  Cargo.toml  FAQ.md  README.md  TEAM_CONTEXT.md  clippy.toml  elp_development.md  index.html  lunr-index-1690993555910.json  lunr-index-1690993860395.json  lunr-index-1691051575227.json  lunr-index-1691058860019.json  lunr-index-1691072827984.json  lunr-index-1691140189346.json  lunr-index-1691413436264.json  lunr-index-1691433557401.json  lunr-index-1691569090010.json  lunr-index-1691574863025.json  lunr-index-1691587548423.json  lunr-index-1691746253254.json  lunr-index-1691760551907.json  lunr-index-1691764086052.json  lunr-index-1692300752214.json  lunr-index-1692635311813.json  lunr-index-1692697837465.json  lunr-index-1692717126296.json  lunr-index-1692797291841.json  lunr-index-1693507484157.json  lunr-index-1693559253671.json  lunr-index-1693575811819.json  lunr-index-1693927701518.json  lunr-index-1693993674739.json  lunr-index-1694070981437.json  lunr-index-1694077761368.json  lunr-index-1694080361493.json  (+3972 more)
crates/base_db/: Cargo.toml
crates/base_db/src/: change.rs  dynamic_calls.rs  fixture.rs  in_flight.rs  include.rs  input.rs  lib.rs  module_index.rs  test_fixture.rs  test_utils.rs
crates/elp/: Cargo.toml  build.rs
crates/elp/src/: arc_types.rs  cli.rs  config.rs  convert.rs  diagnostics.rs  document.rs  from_proto.rs  handlers.rs  lib.rs  line_endings.rs  lsp_ext.rs  mem_docs.rs  memory_usage.rs  op_queue.rs  project_loader.rs  reload.rs  semantic_tokens.rs  server.rs  snapshot.rs  task_pool.rs  third_party_placeholder.rs  to_proto.rs  watchman.rs
crates/elp/src/server/: capabilities.rs  dispatch.rs  logger.rs  progress.rs  setup.rs  telemetry_manager.rs  watchdog.rs  work_registry.rs
crates/elp/tests/slow-tests/: buck_tests.rs  main.rs  support.rs
crates/elp_log/: Cargo.toml
crates/elp_log/src/: file.rs  lib.rs  telemetry.rs
crates/eqwalizer/: Cargo.toml  build.rs
crates/eqwalizer/src/: db.rs  ipc.rs  lib.rs
crates/eqwalizer/src/analyses/: escape_hatches.rs  mod.rs  overloaded_specs.rs
crates/eqwalizer/src/ast/: auto_import.rs  binary_specifier.rs  compiler_macro.rs  contractivity.rs  convert.rs  convert_types.rs  db.rs  expand.rs  expr.rs  ext_types.rs  form.rs  guard.rs  invalid_diagnostics.rs  mod.rs  pat.rs  preprocess.rs  stub.rs  subst.rs  trans_valid.rs  types.rs  variance.rs  variance_check.rs  visitor.rs
crates/erlang_service/: Cargo.toml  build.rs
crates/erlang_service/fixtures/: based_float.erl  based_float.expected  common_test_SUITE.erl  common_test_SUITE_ct_all.expected  common_test_SUITE_ct_groups.expected  common_test_dynamic_SUITE.erl  common_test_exception_SUITE.erl  common_test_exception_SUITE.expected  common_test_incomplete_SUITE.erl  common_test_incomplete_SUITE.expected  ct_info_SUITE.erl  ct_info_dynamic_SUITE.erl  ct_info_dynamic_SUITE.expected  ct_info_exception_SUITE.erl  ct_info_exception_SUITE.expected  ct_info_incomplete_SUITE.erl  ct_info_incomplete_SUITE.expected  ct_info_infinite_loop_SUITE.erl  ct_info_infinite_loop_SUITE.expected  doc_attributes_stripped.erl  doc_attributes_stripped.expected  edoc_doc_attribute.erl  edoc_doc_attribute.expected  edoc_doc_attribute_eep059.expected  edoc_doc_attribute_missing_moduledoc.erl  edoc_doc_attribute_missing_moduledoc_eep059.expected  edoc_errors.erl  edoc_errors.expected  edoc_include.erl  edoc_include.expected  edoc_scan_errors.erl  edoc_scan_errors.expected  edoc_warnings.erl  edoc_warnings.expected  error.erl  error.expected  error_attr.erl  error_attr.expected  latin1_binary.erl  latin1_binary.expected  (+18 more)
crates/erlang_service/src/: common_test.rs  lib.rs
crates/hir/: Cargo.toml
crates/hir/src/: body.rs  code_complexity.rs  condition_expr.rs  db.rs  def_map.rs  diagnostics.rs  edoc.rs  expr.rs  fold.rs  form_list.rs  include.rs  intern.rs  lib.rs  macro_exp.rs  module_data.rs  name.rs  preprocessor.rs  quote.rs  resolver.rs  sema.rs  test_db.rs
crates/hir/src/body/: lower.rs  pretty.rs  scope.rs  tests.rs  tree_print.rs
crates/hir/src/form_list/: form_id.rs  lower.rs  pretty.rs  tests.rs
crates/hir/src/sema/: dynamic_calls.rs  find.rs  to_def.rs
crates/ide/: Cargo.toml
crates/ide/src/: annotations.rs  call_hierarchy.rs  codemod_helpers.rs  common_test.rs  diagnostics.rs  diagnostics_collection.rs  diff.rs  doc_links.rs  document_symbols.rs  expand_macro.rs  extend_selection.rs  fixture.rs  folding_ranges.rs  highlight_related.rs  hover.rs  inlay_hints.rs  lib.rs  navigation_target.rs  rename.rs  runnables.rs  signature_help.rs  syntax_highlighting.rs  tests.rs
crates/ide/src/diagnostics/: application_env.rs  atoms_exhaustion.rs  (+84 more)
crates/ide_assists/: Cargo.toml
crates/ide_assists/src/: assist_config.rs  assist_context.rs  helpers.rs  lib.rs  tests.rs
crates/ide_completion/: Cargo.toml
crates/ide_completion/src/: attributes.rs  ctx.rs  export_functions.rs  export_types.rs  functions.rs  helpers.rs  keywords.rs  lib.rs  macros.rs  maps.rs  modules.rs  records.rs  spec.rs  tests.rs  types.rs  vars.rs
crates/ide_db/: Cargo.toml
crates/ide_db/src/: apply_change.rs  assists.rs  common_test.rs  defs.rs  diagnostic_code.rs  docs.rs  eqwalizer.rs  erl_ast.rs  fixmes.rs  helpers.rs  lib.rs  line_index.rs  metadata.rs  rename.rs  salsa_telemetry.rs  search.rs  source_change.rs  text_edit.rs  tree_diff.rs
crates/ide_ssr/: Cargo.toml
crates/ide_ssr/src/: errors.rs  lib.rs  matching.rs  nester.rs  search.rs  tests.rs
crates/project_model/: Cargo.toml
crates/project_model/fixtures/: rebar.config.script
crates/project_model/src/: buck.rs  eqwalizer_support.rs  json.rs  lib.rs  no_manifest.rs  otp.rs  rebar.rs  temp_dir.rs  test_fixture.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: algo.rs  ast.rs  label.rs  lib.rs  ptr.rs  syntax_error.rs  syntax_kind.rs  syntax_node.rs  ted.rs  token_text.rs  tree_sitter_elp.rs  unescape.rs
crates/types_db/: Cargo.toml
crates/types_db/src/: eqwalizer.rs  lib.rs
xtask/: Cargo.toml
xtask/src/: codegen.rs  main.rs
(+5053 files in other folders)
