[workspace]
members = ["crates/*", "xtask"]
default-members = ["crates/*", "xtask"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "1.1.0"

[workspace.lints.rust]
# Allow cfg(buck_build) which is set by Buck builds but not Cargo
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(buck_build)'] }

[workspace.lints.clippy]
# Do not offer to insert the matches! macro
# RA support, especially formatting, is poor within macros
# So the benefit is not worth it
match_like_matches_macro = "allow"

[workspace.dependencies]
# own local crates
elp_base_db = { path = "./crates/base_db" }
elp_eqwalizer = { path = "./crates/eqwalizer" }
elp_erlang_service = { path = "./crates/erlang_service" }
elp_ide = { path = "./crates/ide" }
elp_ide_assists = { path = "./crates/ide_assists" }
elp_ide_completion = { path = "./crates/ide_completion" }
elp_ide_db = { path = "./crates/ide_db" }
elp_ide_ssr = { path = "./crates/ide_ssr" }
elp_log = { path = "./crates/elp_log" }
elp_project_model = { path = "./crates/project_model" }
elp_syntax = { path = "./crates/syntax" }
elp_types_db = { path = "./crates/types_db" }
hir = { path = "./crates/hir" }

# External crates
always-assert = "0.2.0"
anyhow = "1.0.86"
bpaf = { version = "=0.7.10", features = ["autocomplete", "batteries", "derive"] }
byteorder = "1.5.0"
codespan-reporting = "0.11.1"
cov-mark = "2.0.0"
crossbeam-channel = "0.5.15"
dirs = "5.0"
dissimilar = "1.0.11"
dunce = "1.0.5"
eetf = "0.9.0"
either = "1.13.0"
env_filter = "0.1.4"
expect-test = "1.5.1"
fxhash = "0.2.1"
glob = "0.3.1"
htmlentity = "1.3.2"
humantime = "2.1.0"
imara-diff = "0.1.7"
include_dir = "0.7.4"
indexmap = "2.3.0"
indicatif = { version = "0.17.8", features = ["rayon"] }
itertools = "0.10.5"
jemalloc-ctl = { version = "0.6.1", package = "tikv-jemalloc-ctl", features = ["stats"] }
jemallocator = { version = "0.6.1", package = "tikv-jemallocator" }
jod-thread = "1.0.0"
la-arena = "0.3.1"
lazy_static = "1.5.0"
log = { version = "0.4.29", features = ["kv_unstable"] }
lsp-server = "0.7.6"
lsp-types = "0.94.1"
memchr = "2.7.4"
num-derive = "0.4.2"
num-traits = "0.2.19"
once_cell = "1.19.0"
parking_lot = "0.12.3"
paths = { git = "https://github.com/rust-lang/rust-analyzer", rev = "2026-04-13" }
petgraph = "0.8.3"
proc-macro2 = "1.0.86"
quote = "1.0.36"
rayon = "1.10.0"
regex = "1.12.3"
rowan = "0.15.15"
rustc-hash = "1.1.0"
rustyline = "18.0.0"
salsa = "0.17.0-pre.2"
semver = "1.0.23"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
serde_path_to_error = "0.1.16"
serde_with = "3.18.0"
smallvec = { version = "1.13.2", features = ["const_new", "const_generics", "union"] }
smol_str = { version = "0.3.6", features = ["serde"] }
stdx = { git = "https://github.com/rust-lang/rust-analyzer", rev = "2026-04-13" }
strsim = { version = "0.10.0" }
strum = { version = "0.27.2", features = ["derive"] }
tempfile = "3.27.0"
test-case = "3.3.1"
text-size = "1.1.1"
thiserror = "1.0"
threadpool = "1.8.1"
timeout-readwrite = "0.3.3"
toml = "0.9.11"
tracing = "0.1.40"
tree-sitter = "0.23.2"
# When developing the grammar, you may want to point to a local version
tree-sitter-erlang = { path = "../tree-sitter-erlang" }
# tree-sitter-erlang = "0.16.0"
trie-rs = "0.4.2"
triple_accel = "0.4.0"
url = "2.5.4"
ustr = { version = "1.1.0", features = ["serde"] }
vfs = { git = "https://github.com/rust-lang/rust-analyzer", rev = "2026-04-13" }
vfs-notify = { git = "https://github.com/rust-lang/rust-analyzer", rev = "2026-04-13" }
xshell = "0.2.6"
