[package]
name = "xtask"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
krates.workspace = true
pico-args.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde.workspace = true
serde_json.workspace = true
tree-sitter-erlang.workspace = true
xshell.workspace = true
