[package]
name = "elp_base_db"
edition.workspace = true
version.workspace = true

[lib]
doctest = false

[dependencies]
elp_project_model.workspace = true
elp_syntax.workspace = true

dissimilar.workspace = true
eetf.workspace = true
either.workspace = true
fxhash.workspace = true
lazy_static.workspace = true
log.workspace = true
paths.workspace = true
profile.workspace = true
regex.workspace = true
salsa.workspace = true
stdx.workspace = true
tempfile.workspace = true
vfs.workspace = true

[dev-dependencies]
expect-test.workspace = true
