[package]
autobins = false
name = "elp"
edition.workspace = true
version.workspace = true

[features]
default = ["buck", "jemalloc"]
buck = ["elp_project_model/buck"]
jemalloc = ["dep:jemalloc-ctl", "dep:jemallocator"]

[[bin]]
name = "elp"
path = "src/bin/main.rs"

[lints]
workspace = true

[dependencies]
elp_eqwalizer.workspace = true
elp_ide.workspace = true
elp_ide_db.workspace = true
elp_log.workspace = true
elp_project_model.workspace = true
elp_syntax.workspace = true

always-assert.workspace = true
anyhow.workspace = true
bpaf.workspace = true
codespan-reporting.workspace = true
crossbeam-channel.workspace = true
fxhash.workspace = true
hir.workspace = true
include_dir.workspace = true
indexmap.workspace = true
indicatif.workspace = true
itertools.workspace = true
lazy_static.workspace = true
log.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
parking_lot.workspace = true
paths.workspace = true
profile.workspace = true
rayon.workspace = true
rustyline.workspace = true
serde_json.workspace = true
serde_path_to_error.workspace = true
serde.workspace = true
stdx.workspace = true
strsim.workspace = true
threadpool.workspace = true
toml.workspace = true
tracing.workspace = true
vfs-notify.workspace = true
vfs.workspace = true

[target.'cfg(not(any(target_env = "msvc", target_os = "openbsd")))'.dependencies]
jemalloc-ctl = { workspace = true, optional = true }
jemallocator = { workspace = true, optional = true }

[dev-dependencies]
env_logger.workspace = true
expect-test.workspace = true
regex.workspace = true
tempfile.workspace = true
test-case.workspace = true

[build-dependencies]
time = { version = "0.3.47", features = ["formatting"] }
