[package]
name = "elp_log"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
crossbeam-channel.workspace = true
env_logger.workspace = true
fxhash.workspace = true
humantime.workspace = true
lazy_static.workspace = true
log.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
expect-test.workspace = true
tempfile.workspace = true
regex.workspace = true
