[package]
name = "elp_eqwalizer"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
elp_base_db.workspace = true
elp_syntax.workspace = true
elp_types_db.workspace = true

anyhow.workspace = true
eetf.workspace = true
fxhash.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
ra_ap_query-group-macro.workspace = true
salsa.workspace = true
serde_json.workspace = true
serde.workspace = true
serde_with.workspace = true
stdx.workspace = true
tempfile.workspace = true
timeout-readwrite.workspace = true
