[package]
name = "elp_erlang_service"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
elp_base_db.workspace = true
elp_syntax.workspace = true
elp_project_model.workspace = true

anyhow.workspace = true
byteorder.workspace = true
crossbeam-channel.workspace = true
eetf.workspace = true
fxhash.workspace = true
jod-thread.workspace = true
lazy_static.workspace = true
log.workspace = true
parking_lot.workspace = true
regex.workspace = true
stdx.workspace = true
tempfile.workspace = true
text-size.workspace = true

[dev-dependencies]
env_logger.workspace = true
expect-test.workspace = true
lazy_static.workspace = true
