[package]
name = "elp_ide"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
elp_eqwalizer.workspace = true
elp_erlang_service.workspace = true
elp_ide_assists.workspace = true
elp_ide_db.workspace = true
elp_ide_completion.workspace = true
elp_ide_ssr.workspace = true
elp_project_model.workspace = true
elp_syntax.workspace = true
elp_types_db.workspace = true
hir.workspace = true

anyhow.workspace = true
fxhash.workspace = true
imara-diff.workspace = true
itertools.workspace = true
lazy_static.workspace = true
log.workspace = true
profile.workspace = true
rayon.workspace = true
regex.workspace = true
serde.workspace = true
smallvec.workspace = true
stdx.workspace = true
strsim.workspace = true
tracing.workspace = true
triple_accel.workspace = true
url.workspace = true

[dev-dependencies]
expect-test.workspace = true
toml.workspace = true
