[package]
name = "elp_ide_assists"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
elp_ide_db.workspace = true
elp_syntax.workspace = true
hir.workspace = true

cov-mark.workspace = true
fxhash.workspace = true
itertools.workspace = true
lazy_static.workspace = true
log.workspace = true
regex.workspace = true
stdx.workspace = true
text-edit.workspace = true

[dev-dependencies]
expect-test.workspace = true
