[package]
name = "elp_ide_completion"
edition.workspace = true
version.workspace = true

[dependencies]
elp_base_db.workspace = true
elp_ide_db.workspace = true
elp_syntax.workspace = true
hir.workspace = true

fxhash.workspace = true
lazy_static.workspace = true
log.workspace = true
lsp-types.workspace = true
stdx.workspace = true

[dev-dependencies]
expect-test.workspace = true
serde_json.workspace = true
