[package]
name = "elp_ide_db"
edition.workspace = true
version.workspace = true

[dependencies]
elp_base_db.workspace = true
elp_eqwalizer.workspace = true
elp_erlang_service.workspace = true
elp_project_model.workspace = true
elp_syntax.workspace = true
hir.workspace = true

anyhow.workspace = true
eetf.workspace = true
either.workspace = true
fxhash.workspace = true
indexmap.workspace = true
lazy_static.workspace = true
log.workspace = true
memchr.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
profile.workspace = true
rustc-hash.workspace = true
serde.workspace = true
stdx.workspace = true
tempfile.workspace = true
text-edit.workspace = true

[dev-dependencies]
expect-test.workspace = true
