[package]
name = "elp_ide_db"
edition.workspace = true
version.workspace = true

[features]
jemalloc = ["dep:jemalloc-ctl"]

[lints]
workspace = true

[dependencies]
elp_base_db.workspace = true
elp_eqwalizer.workspace = true
elp_erlang_service.workspace = true
elp_project_model.workspace = true
elp_syntax.workspace = true
elp_types_db.workspace = true
hir.workspace = true

cov-mark.workspace = true
eetf.workspace = true
either.workspace = true
fxhash.workspace = true
indexmap.workspace = true
itertools.workspace = true
lazy_static.workspace = true
log.workspace = true
memchr.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
paths.workspace = true
regex.workspace = true
rustc-hash.workspace = true
serde.workspace = true
stdx.workspace = true
strum.workspace = true
text-size.workspace = true
tracing.workspace = true

[target.'cfg(not(any(target_env = "msvc", target_os = "openbsd")))'.dependencies]
jemalloc-ctl = { workspace = true, optional = true }

[dev-dependencies]
dunce.workspace = true
expect-test.workspace = true
toml.workspace = true
