[package]
name = "elp_project_model"
edition.workspace = true
version.workspace = true

[dependencies]
elp_log.workspace = true

anyhow.workspace = true
eetf.workspace = true
fxhash.workspace = true
itertools.workspace = true
lazy_static.workspace = true
log.workspace = true
parking_lot.workspace = true
paths.workspace = true
serde_json.workspace = true
serde.workspace = true
tempfile.workspace = true
toml.workspace = true
