[package]
name = "elp_project_model"
edition.workspace = true
version.workspace = true

[features]
buck = []

[dependencies]
elp_log.workspace = true

anyhow.workspace = true
dirs.workspace = true
eetf.workspace = true
fxhash.workspace = true
include_dir.workspace = true
indexmap.workspace = true
itertools.workspace = true
lazy_static.workspace = true
log.workspace = true
parking_lot.workspace = true
paths.workspace = true
serde_json.workspace = true
serde.workspace = true
stdx.workspace = true
tempfile.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
expect-test.workspace = true
