[package]
name = "elp_syntax"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
itertools.workspace = true
lazy_static.workspace = true
num-derive.workspace = true
num-traits.workspace = true
once_cell.workspace = true
regex.workspace = true
rowan.workspace = true
smol_str.workspace = true
stdx.workspace = true
tracing.workspace = true
tree-sitter.workspace = true
tree-sitter-erlang.workspace = true

expect-test.workspace = true
