[package]
name = "elp_types_db"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
elp_base_db.workspace = true
elp_syntax.workspace = true

fxhash.workspace = true
serde.workspace = true
serde_with.workspace = true
itertools.workspace = true
ustr.workspace = true

[dev-dependencies]
expect-test.workspace = true
